<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trackingLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <VideoView
        android:id="@+id/videoview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
<ImageButton
    android:id="@+id/guide"
    android:layout_width="70dp"
    android:layout_height="70dp"
    android:src="@drawable/ic_guide"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@drawable/round_corner"
    android:onClick="onContentSelect"/>
    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">
        <!--android:visibility="gone"-->
        <ImageButton
            android:id="@+id/audioContent"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/audio"
            android:background="@drawable/round_corner"
            android:src="@drawable/ic_audio"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:onClick="onContentSelect" />

        <ImageButton
            android:id="@+id/videoContent"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/video"
            android:layout_gravity="bottom"
            android:background="@drawable/round_corner"
            android:src="@drawable/ic_video"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onContentSelect" />

        <ImageButton
            android:id="@+id/threeDContent"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/threeDcontent"
            android:layout_gravity="bottom"
            android:background="@drawable/round_corner"
            android:src="@drawable/ic_3d"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onContentSelect" />

        <ImageButton
            android:id="@+id/trackCadSandettie"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/threeDcontent"
            android:layout_gravity="bottom"
            android:background="@drawable/round_corner"
            android:src="@drawable/ic_track"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onContentSelect" />
    </LinearLayout>

<!--JOYSTICK CONTROLL-->
    <ImageButton
        android:id="@+id/rotateModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/threeDcontent"
        android:src="@drawable/ic_reload"
        android:background="@color/transparent"
        android:onClick="onContentSelect"
        android:visibility="gone"/>
    <ImageButton
        android:id="@+id/arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_up"
        android:background="@color/transparent"
        android:onClick="onContentSelect"
        android:visibility="gone"/>
    <ImageButton
        android:id="@+id/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        android:background="@color/transparent"
        android:onClick="onContentSelect"
        android:visibility="gone"/>
    <ImageButton
        android:id="@+id/arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_down"
        android:background="@color/transparent"
        android:onClick="onContentSelect"
        android:visibility="gone"/>
    <ImageButton
        android:id="@+id/arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        android:background="@color/transparent"
        android:onClick="onContentSelect"
        android:visibility="gone"/>
    <!--android:longClickable="true"-->
    <!--android:layout_gravity="bottom|right"-->
    <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
    <!--android:layout_marginLeft="50dp"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:layout_marginBottom="10dp"-->
    <ImageButton
        android:id="@+id/resetCad"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/threeDcontent"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/round_corner"
        android:src="@drawable/ic_reset"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="onContentSelect"
        android:visibility="gone" />


</FrameLayout>

